--- a/cnsapplet/index.html
+++ b/cnsapplet/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<applet code="com.CNSApplet.class" width="600" height="600"
+<applet code="com/CNSApplet.class" width="600" height="600"
         archive="file:///home/victorinox/workspace_java/cnsapplet/classes/cnsapplet.jar">
 </applet>
 </body>
