--- a/cnsapplet/index.html
+++ b/cnsapplet/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
-<applet code="com/CNSApplet.class" width="600" height="600"
-        archive="file:///home/victorinox/workspace_java/cnsapplet/classes/cnsapplet.jar">
+<div align="center">
+<applet code="com.CNSApplet.class" width="600" height="600" archive="cnsapplet.jar">
+</div>
 </applet>
 </body>
 </html>
